--- a/resources/index.html
+++ b/resources/index.html
@@ -86,7 +86,8 @@
                     if (data.message == 'success') {
                         $('#loginModal').modal('hide');
                         console.log('success');
-                        window.location="http://www.imooc.com/t/350968";
+                        alert('账号密码校验成功');
+                        window.location="https://github.com/weilanhanf/python-http-server";
                     } else {
                         alert('账号密码校验失败');
                     }
